--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@material-ui/core": "^3.5.1",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.10.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-snowstorm": "^0.0.2",
+    "react-youtube": "^7.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && rsync -avhP build/. deploy@benbristow:/var/www/christmassongs.benbristow.co.uk --delete"
   },
   "eslintConfig": {
     "extends": "react-app"
