--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "@material-ui/core": "^3.5.1",
+    "@material-ui/icons": "^3.0.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
