--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
+    "react-share": "^2.4.0",
     "react-snowstorm": "^0.0.2",
     "react-youtube": "^7.8.0"
   },
